--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="hero">
+  <div class="image-container">
+    <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
+  </div>
+  <div class="hero-content">
+    <h1>Welcome to my pinterest clone</h1>
+    <p>Discover amazing ideas and inspirations</p>
+    <a href="#" class="explore-button">Explore Now</a>
+  </div>
+</div>
+
 
 </body>
 
